--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,10 @@ steps:
   displayName: 'Write build info'
   workingDirectory: Tailspin.SpaceGame.Web/wwwroot
 
+- script: 'mkdir super'
+  displayName: 'Create Superman script'
+  workingDirectory: Tailspin.SpaceGame.Web
+
 - script: 'echo "Superman can fly $(Build.BuildNumber)" > superman.txt'
   displayName: 'Superman script'
   workingDirectory: Tailspin.SpaceGame.Web/super
