--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,6 +55,18 @@ steps:
   #Map secret enc variables etc
   env:
     sec: $(sec)
+
+# Python script
+# Run a Python file or inline script
+- task: PythonScript@0
+  inputs:
+    #scriptSource: 'filePath' # Options: filePath, inline
+    #scriptPath: # Required when scriptSource == filePath
+    #script: # Required when scriptSource == inline
+    #arguments: # Optional
+    #pythonInterpreter: # Optional
+    #workingDirectory: # Optional
+    #failOnStderr: false # Optional
   
 - task: DotNetCoreCLI@2
   displayName: 'Restore project dependencies'
@@ -68,3 +80,16 @@ steps:
     command: 'build'
     arguments: '--no-restore --configuration Release'
     projects: '**/*.csproj'
+
+- task: DotNetCoreCLI@2
+  displayName: 'Publish the project - Release'
+  inputs:
+    command: 'publish'
+    projects: '**/*.csproj'
+    publishWebProjects: false
+    arguments: '--no-build --configuration Release --output $(Build.ArtifactStagingDirectory)/Release'
+    zipAfterPublish: true
+
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifact: drop'
+  condition: succeeded()    
