--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,7 +56,7 @@ steps:
     targetType: 'filePath' # Optional. Options: filePath, inline
     filePath: 'Tailspin.SpaceGame.Web/test.sh'
     env:
-      sec: '$(sec)'
+      sec: $(sec)
 
     #arguments: # Optional
     #script: '# echo Hello world' # Required when targetType == inline
