--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,3 +32,16 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+
+- task: DotNetCoreCLI@2
+  displayName: 'Publish the project - Release- Make ZIP'
+  inputs:
+    command: 'publish'
+    projects: '**/*.csproj'
+    publishWebProjects: false
+    arguments: '--no-build --configuration Release --output $(Build.ArtifactStagingDirectory)/Release'
+    zipAfterPublish: true
+  
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifact zip: To pipeline'
+  condition: succeeded()
