--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,6 +46,17 @@ steps:
   displayName: 'Publish Artifact zip: To pipeline'
   condition: succeeded()
 
+- task: DotNetCoreCLI@2
+  displayName: 'Pack the project - $(buildConfiguration)'
+  inputs:
+    command: 'pack'
+    projects: '**/*.csproj'
+    arguments: '--no-build --configuration $(buildConfiguration)'
+    versioningScheme: byPrereleaseNumber
+    majorVersion: '1'
+    minorVersion: '0'
+    patchVersion: '0'
+
 - task: NuGetCommand@2
   displayName: 'Publish NuGet package'
   inputs:
